# qjs-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/governance/: README.md  (+1 more)
.planning/: AGENTS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  verification-schema.md
.serena/: project.yml
agents/: qjs-rust-porter.md
crates/: AGENTS.md
crates/benchmarks/: Cargo.toml
crates/benchmarks/src/: contract.rs  main.rs
crates/benchmarks/tests/: adapter_normalization.rs  benchmark_contract.rs  hot_path_contract.rs  perf_packet_a_report.rs
crates/vm/: AGENTS.md  Cargo.toml
crates/vm/src/: array_builtins.rs  external_host.rs  fast_path.rs  host_adapter.rs  lib.rs  object_builtins.rs  opaque_bindings.rs  perf.rs  promise_builtins.rs  runtime_limits.rs  script_runtime.rs  string_builtins.rs
crates/vm/tests/: async_host_callbacks.rs  collection_semantics.rs  core_builtins_baseline.rs  host_adapter.rs  json_parse.rs  json_stringify.rs  module_lifecycle.rs  native_errors.rs  perf_hotspot_attribution.rs  perf_packet_a.rs  perf_packet_b.rs  perf_packet_c.rs  perf_packet_d.rs
docs/: benchmark-contract.md  current-status.md  engine-benchmarks.md  gc-design.md  gc-snapshot-report.md  gc-test-plan.md  long-horizon-task-phase4.md  long-horizon-task-phase7.md  memory-inventory.md  performance-closure-policy.md  phase4-review.md  quickjs-mapping.md  risk-register.md  root-strategy.md  semantics-checklist.md  test262-baseline.md  test262-lite.md
scripts/: quickjs-wsl.cmd  (+1 more)
(+396 files in other folders)
