[package]
name = "vm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ast.workspace = true
builtins.workspace = true
bytecode.workspace = true
parser.workspace = true
runtime.workspace = true
fancy-regex = "0.14"
regex = "1"
serde_json = "1"
